<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_menu_search"/>
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/nav_menu_favorites"
        android:titleTextAppearance="@style/BottomNavItemTextStyle" />

    <item
        android:id="@+id/navigation_responses"
        android:icon="@drawable/ic_responses"
        android:title="@string/nav_menu_responses" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/nav_menu_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_menu_profile" />

</menu>
