<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display"
        android:textSize="20sp"
        android:textFontWeight="600"
        android:lineHeight="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/fragment_login_singin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:cardCornerRadius="8dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@color/card">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_login_search_work"
                    android:fontFamily="@font/sf_pro_display"
                    android:textSize="16sp"
                    android:lineHeight="19.2sp"
                    android:textFontWeight="500"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundColor="@color/text_layout"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/text_layout"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:lineHeight="18.2sp"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="14sp">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/buttonContinue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.56"
                        android:backgroundTint="@color/blue_button"
                        android:fontFamily="@font/sf_pro_display"
                        android:lineHeight="18.2sp"
                        android:text="@string/fragment_login_continue"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="14sp"
                        app:cornerRadius="8dp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.44"
                        android:background="?attr/selectableItemBackground"
                        android:fontFamily="@font/sf_pro_display"
                        android:lineHeight="18.2sp"
                        android:text="@string/fragment_login_singin_with_password"
                        android:textAlignment="textEnd"
                        android:textColor="@color/blue_button"
                        android:textFontWeight="400"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:cardCornerRadius="8dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@color/card">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_login_search_workers"
                    android:fontFamily="@font/sf_pro_display"
                    android:textSize="16sp"
                    android:lineHeight="19.2sp"
                    android:textFontWeight="500"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </TextView>
                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_login_search_worker_description"
                    android:fontFamily="@font/sf_pro_display"
                    android:textSize="14sp"
                    android:lineHeight="18.2sp"
                    android:textFontWeight="400"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </TextView>
                <Button
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/sf_pro_display"
                    android:textSize="14sp"
                    android:lineHeight="18.2sp"
                    android:textFontWeight="400"
                    android:text="@string/fragment_login_i_search_button" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

