<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display"
            android:lineHeight="24sp"
            android:text="@string/fragment_login_confirm_text_send_code"
            android:textFontWeight="600"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display"
            android:text="@string/fragment_login_confirm_text_send_code_description"
            android:textFontWeight="500"
            android:textSize="16sp"
            android:lineHeight="19.2sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/text_layout"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/text_layout">
                <com.den.shak.effectivemobile.ui.CustomTextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/fragment_login_confirm_text_hint"
                    android:inputType="number"
                    android:lineHeight="18.2sp"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textFontWeight="500"
                    android:textSize="16sp">
                </com.den.shak.effectivemobile.ui.CustomTextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:boxBackgroundColor="@color/text_layout"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/text_layout">
                <com.den.shak.effectivemobile.ui.CustomTextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/fragment_login_confirm_text_hint"
                    android:inputType="number"
                    android:lineHeight="18.2sp"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textFontWeight="500"
                    android:textSize="16sp">
                </com.den.shak.effectivemobile.ui.CustomTextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:boxBackgroundColor="@color/text_layout"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/text_layout">

                <com.den.shak.effectivemobile.ui.CustomTextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/fragment_login_confirm_text_hint"
                    android:inputType="number"
                    android:lineHeight="18.2sp"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textFontWeight="500"
                    android:textSize="16sp">
                </com.den.shak.effectivemobile.ui.CustomTextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:boxBackgroundColor="@color/text_layout"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/text_layout">
                <com.den.shak.effectivemobile.ui.CustomTextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/fragment_login_confirm_text_hint"
                    android:inputType="number"
                    android:lineHeight="18.2sp"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textFontWeight="500"
                    android:textSize="16sp">
                </com.den.shak.effectivemobile.ui.CustomTextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/buttonConfirm"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/blue_button"
            android:fontFamily="@font/sf_pro_display"
            android:lineHeight="20.8sp"
            android:text="@string/fragment_login_confirm_button"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:cornerRadius="8dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

