<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/search_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@color/text_layout"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/text_layout"
                    app:boxStrokeWidth="0dp"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_search">
                    <com.den.shak.effectivemobile.ui.CustomTextInputEditText
                        android:id="@+id/search_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display"
                        android:gravity="start"
                        android:hint="@string/fragment_home_search_hint"
                        android:inputType="text"
                        android:lineHeight="18.2sp"
                        android:textColor="@color/white"
                        android:textFontWeight="500"
                        android:textSize="14sp">
                    </com.den.shak.effectivemobile.ui.CustomTextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/text_layout"
                    app:strokeWidth="0dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_setting" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/filter_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="9dp"
                android:visibility="gone"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/vacancy_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display"
                    android:lineHeight="16.8sp"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="14sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display"
                        android:lineHeight="16.8sp"
                        android:text="@string/fragment_home_compliance"
                        android:textColor="@color/blue_button"
                        android:textFontWeight="400"
                        android:textSize="14sp"/>
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_filter"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="bottom" />
                </LinearLayout>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/offers_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="gone" />
            <TextView
                android:id="@+id/vacancy_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/sf_pro_display"
                android:lineHeight="24sp"
                android:text="@string/fragment_home_title"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="20sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vacancy_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="8dp" />
            <Button
                android:id="@+id/button_more"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="55dp"
                android:backgroundTint="@color/blue_button"
                android:fontFamily="@font/sf_pro_display"
                android:lineHeight="20.8sp"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
